Implemented navComponent  and ui part of album list (few issues and suggestion in todo list needed to be checked)

--- a/app/src/main/res/layout/fragment_album_list.xml
+++ b/app/src/main/res/layout/fragment_album_list.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/asdfghjk"
-    tools:context=".fragments.AlbumListFragment">
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+    tools:context=".fragments.AlbumListFragment"
+    android:background="@color/background_color"
+    >
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:nestedScrollingEnabled="false"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/recycler_view"/>
+
+</androidx.core.widget.NestedScrollView>
+
