--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,34 +53,27 @@
         </com.google.android.material.appbar.AppBarLayout>
 
 
-            <FrameLayout
-                android:isScrollContainer="false"
-                app:layout_anchorGravity="bottom"
-                app:layout_anchor="@id/app_bar_layout"
-                android:id="@+id/nav_host_container"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        <FrameLayout
+        <fragment
             android:isScrollContainer="false"
             app:layout_anchorGravity="bottom"
             app:layout_anchor="@id/app_bar_layout"
-            android:id="@+id/song_container"
-            android:visibility="gone"
+            android:id="@+id/nav_host_container"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/m_player_navigation" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:cardCornerRadius="@dimen/radius_bottom_nav"
+        style="@style/custom_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
