Implemented playlist basic functionality without browsing tree. need to change to browsing

--- a/app/src/main/res/layout/music_item_list_layout.xml
+++ b/app/src/main/res/layout/music_item_list_layout.xml
@@ -72,8 +72,18 @@
             style="@style/icon_style"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
-            android:layout_marginEnd="16dp"
             android:src="@drawable/ic_sort"
+            android:visibility="gone"
+            android:layout_marginRight="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/checkBox"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            style="@style/custom_checkbox_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
