--- a/app/src/main/res/navigation/m_player_navigation.xml
+++ b/app/src/main/res/navigation/m_player_navigation.xml
@@ -23,7 +23,17 @@
         android:id="@+id/playlist_fragment"
         android:name="com.example.mplayer.fragments.PlaylistFragment"
         android:label="Playlists"
-        tools:layout="@layout/fragment_playlist" />
+        tools:layout="@layout/fragment_playlist" >
+        <action
+            android:id="@+id/action_playlist_fragment_to_selectionFragment"
+            app:destination="@id/selectionFragment" />
+        <argument
+            android:name="selectedItems"
+            app:argType="string[]" />
+        <action
+            android:id="@+id/action_playlist_fragment_to_playlistItemFragment"
+            app:destination="@id/playlistItemFragment" />
+    </fragment>
     <fragment
         android:id="@+id/albumListFragment"
         android:name="com.example.mplayer.fragments.AlbumListFragment"
@@ -32,5 +42,26 @@
         <argument
             android:name="mediaId"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/selectionFragment"
+        android:name="com.example.mplayer.fragments.SelectionFragment"
+        android:label="fragment_selection"
+        tools:layout="@layout/fragment_selection" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="by"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/playlistItemFragment"
+        android:name="com.example.mplayer.fragments.PlaylistItemFragment"
+        android:label="fragment_playlist_item"
+        tools:layout="@layout/fragment_playlist_item" >
+        <argument
+            android:name="mediaIds"
+            app:argType="string[]" />
     </fragment>
 </navigation>
