--- a/app/src/main/res/navigation/m_player_navigation.xml
+++ b/app/src/main/res/navigation/m_player_navigation.xml
@@ -3,65 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/m_player_navigation"
-    app:startDestination="@id/tracks_fragment">
+    app:startDestination="@id/tracks">
 
-    <fragment
-        android:id="@+id/tracks_fragment"
-        android:name="com.example.mplayer.fragments.TracksFragment"
-        android:label="Tracks"
-        tools:layout="@layout/fragment_tracks" />
-    <fragment
-        android:id="@+id/album_fragment"
-        android:name="com.example.mplayer.fragments.AlbumFragment"
-        android:label="Albums"
-        tools:layout="@layout/fragment_album" >
-        <action
-            android:id="@+id/action_to_album_list"
-            app:destination="@id/albumListFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/playlist_fragment"
-        android:name="com.example.mplayer.fragments.PlaylistFragment"
-        android:label="Playlists"
-        tools:layout="@layout/fragment_playlist" >
-        <action
-            android:id="@+id/action_playlist_fragment_to_selectionFragment"
-            app:destination="@id/selectionFragment" />
-        <argument
-            android:name="selectedItems"
-            app:argType="string[]" />
-        <action
-            android:id="@+id/action_playlist_fragment_to_playlistItemFragment"
-            app:destination="@id/playlistItemFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/albumListFragment"
-        android:name="com.example.mplayer.fragments.AlbumListFragment"
-        android:label="Album"
-        tools:layout="@layout/fragment_album_list">
-        <argument
-            android:name="mediaId"
-            app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/selectionFragment"
-        android:name="com.example.mplayer.fragments.SelectionFragment"
-        android:label="fragment_selection"
-        tools:layout="@layout/fragment_selection" >
-        <argument
-            android:name="name"
-            app:argType="string" />
-        <argument
-            android:name="by"
-            app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/playlistItemFragment"
-        android:name="com.example.mplayer.fragments.PlaylistItemFragment"
-        android:label="fragment_playlist_item"
-        tools:layout="@layout/fragment_playlist_item" >
-        <argument
-            android:name="mediaIds"
-            app:argType="string[]" />
-    </fragment>
+
+    <include app:graph="@navigation/tracks"/>
+    <include app:graph="@navigation/albums"/>
+    <include app:graph="@navigation/playlists"/>
 </navigation>
