--- a/app/src/main/res/layout/music_item_list_layout.xml
+++ b/app/src/main/res/layout/music_item_list_layout.xml
@@ -7,19 +7,19 @@
     android:layout_marginTop="8dp"
     app:cardBackgroundColor="@color/background_color"
     app:cardElevation="0dp">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/card_music_item"
-        android:layout_marginHorizontal="16dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp"
+        android:gravity="center_vertical">
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/materialCardView3"
             android:layout_width="@dimen/card_item_image_size"
             android:layout_height="@dimen/card_item_image_size"
             app:cardCornerRadius="@dimen/card_item_image_radius"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:cardElevation="0dp">
 
             <ImageView
@@ -29,73 +29,64 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/place_holder" />
         </com.google.android.material.card.MaterialCardView>
-
-        <TextView
-            android:id="@+id/item_title"
-            style="@style/TitleTextStyle"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            android:lines="1"
-            android:text="Track Name"
-            android:textSize="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/item_more"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/materialCardView3"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginEnd="24dp">
 
-        <TextView
-            android:id="@+id/item_subtitle"
-            style="@style/normal_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Artist Name"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/item_title"
-            app:layout_constraintTop_toBottomOf="@+id/item_title" />
 
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:id="@+id/item_title"
+                        style="@style/TitleTextStyle"
+                        android:layout_width="wrap_content"
+                        android:lines="1"
+                        android:text="Track Name"
+                        android:textSize="16dp"
+                       />
+
+                    <TextView
+                        android:id="@+id/item_subtitle"
+                        style="@style/normal_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Artist Name"
+                        android:textSize="12sp"
+                        app:layout_constraintStart_toStartOf="@+id/item_title"
+                        app:layout_constraintTop_toBottomOf="@+id/item_title" />
+
+
+        </LinearLayout>
         <ImageView
-            android:id="@+id/item_more"
-            style="@style/icon_style"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_more"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/item_move"
-            app:layout_constraintTop_toTopOf="parent" />
+                    android:id="@+id/item_more"
+                    style="@style/icon_style"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_more"
+                    />
 
-        <ImageView
-            android:id="@+id/item_move"
-            style="@style/icon_style"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:src="@drawable/ic_sort"
-            android:visibility="gone"
-            android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox"
-            app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/item_move"
+                    style="@style/icon_style"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
+                    android:src="@drawable/ic_sort"
+                    android:visibility="gone"
+                    android:layout_marginRight="8dp"
+                    />
 
-        <CheckBox
-            android:id="@+id/checkBox"
-            style="@style/custom_checkbox_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                <CheckBox
+                    android:id="@+id/checkBox"
+                    style="@style/custom_checkbox_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                     />
 
-
-<View
-    android:id="@+id/end_line"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/black_60"
-    app:layout_constraintBottom_toBottomOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
