--- a/app/src/main/res/layout/music_item_list_layout.xml
+++ b/app/src/main/res/layout/music_item_list_layout.xml
@@ -2,22 +2,30 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     app:cardBackgroundColor="@color/background_color"
     app:cardElevation="0dp">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="top"
+        android:background="@color/transparent"/>
 
     <LinearLayout
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
-        android:gravity="center_vertical">
+        android:gravity="center">
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/materialCardView3"
-            android:layout_width="@dimen/card_item_image_size"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="@dimen/card_item_image_size"
             app:cardCornerRadius="@dimen/card_item_image_radius"
             app:cardElevation="0dp">
@@ -30,19 +38,18 @@
                 android:src="@drawable/place_holder" />
         </com.google.android.material.card.MaterialCardView>
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="24dp">
+            android:layout_weight="7"
+            android:layout_marginHorizontal="16dp"
+            android:orientation="vertical">
 
 
                     <TextView
                         android:layout_height="wrap_content"
                         android:id="@+id/item_title"
                         style="@style/TitleTextStyle"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:lines="1"
                         android:text="Track Name"
                         android:textSize="16dp"
@@ -51,41 +58,49 @@
                     <TextView
                         android:id="@+id/item_subtitle"
                         style="@style/normal_text"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Artist Name"
+                        android:maxLines="1"
                         android:textSize="12sp"
                         app:layout_constraintStart_toStartOf="@+id/item_title"
                         app:layout_constraintTop_toBottomOf="@+id/item_title" />
 
 
         </LinearLayout>
-        <ImageView
-                    android:id="@+id/item_more"
-                    style="@style/icon_style"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_more"
-                    />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/item_more"
+                style="@style/icon_style"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/icon_size"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_more"
+                />
 
-                <ImageView
-                    android:id="@+id/item_move"
-                    style="@style/icon_style"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:src="@drawable/ic_sort"
-                    android:visibility="gone"
-                    android:layout_marginRight="8dp"
-                    />
+            <ImageView
+                android:id="@+id/item_move"
+                style="@style/icon_style"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/icon_size"
+                android:src="@drawable/ic_sort"
+                android:visibility="gone"
+                />
 
-                <CheckBox
-                    android:id="@+id/checkBox"
-                    style="@style/custom_checkbox_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                     />
+            <CheckBox
+                android:id="@+id/checkBox"
+                style="@style/custom_checkbox_style"
+                android:buttonTint="@color/primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                />
+        </LinearLayout>
+
 
     </LinearLayout>
 
