--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
+        app:layout_constraintBottom_toTopOf="@+id/player_mini"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,18 +53,30 @@
 
 
         <fragment
-            android:isScrollContainer="false"
-            app:layout_anchorGravity="bottom"
-            app:layout_anchor="@id/app_bar_layout"
             android:id="@+id/nav_host_container"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:isScrollContainer="false"
             app:defaultNavHost="true"
+            app:layout_anchor="@id/app_bar_layout"
+            app:layout_anchorGravity="bottom"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             app:navGraph="@navigation/m_player_navigation" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.exoplayer2.ui.PlayerControlView
+        android:id="@+id/player_mini"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/materialCardView2"
+        android:visibility="gone"
+        android:background="@color/transparent"
+        app:show_timeout="0"
+        app:controller_layout_id="@layout/player_mini_layout"/>
+
+
 
 
     <com.google.android.material.card.MaterialCardView
@@ -72,7 +84,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        style="@style/custom_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
