--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/recycler_view"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.TracksFragment"
-    android:background="@color/background_color"
-   />
+  >
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recycler_view"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".fragments.TracksFragment"
+        android:background="@color/background_color"/>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
