--- a/app/src/main/res/layout/add_playlist_dialog.xml
+++ b/app/src/main/res/layout/add_playlist_dialog.xml
@@ -51,6 +51,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
         android:hint="By~"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +60,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/by_text_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+           />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
