--- a/app/src/main/res/menu/arrange_menu_item.xml
+++ b/app/src/main/res/menu/arrange_menu_item.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <item android:id="@+id/arrange_items"
     android:title="Arrange Items"
-    android:icon="@drawable/ic_baseline_menu_24"
-    android:iconTint="@color/primary"
-    app:showAsAction="ifRoom"
-
    />
+    <item android:id="@+id/add_items"
+        android:title="Add items" />
 
 </menu>
